tests/ui/imports/extern-crate-used.stderr
error: `extern crate` is not idiomatic in the new edition
  --> $DIR/extern-crate-used.rs:18:1
   |
LL | extern crate core;
   | ^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/extern-crate-used.rs:6:9
   |
LL | #![deny(unused_extern_crates)]
   |         ^^^^^^^^^^^^^^^^^^^^
help: convert it to a `use`
   |
LL - extern crate core;
LL + use core;
   |

error: aborting due to 1 previous error

